Kubernetes/Démo-Mongo/Mongo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
      - image: mongo:latest
        name: mongodb
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - name: mongo-database
          containerPort: 27017
