Kubernetes/Démo-Mongo/Express-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: express-service
spec:
  #option qui rend le service externe
  type: LoadBalancer
  selector:
    app: mongo-express
  ports:
  - port: 8081
    protocol: TCP
    targetPort: 8081
    #port extérieur du node valeur entre 30000 et 32727
    nodePort: 30000
